change: fixed GitHub casing, wrapped content in hovered box-shadow effect

--- a/src/components/header/index-header.scss
+++ b/src/components/header/index-header.scss
@@ -11,7 +11,7 @@
         font-size: 2.9rem;
         line-height: 3rem;
         color: transparentize($color: black, $amount: .4);
-        font-weight: 600;
+        font-weight: 500;
         display: flex;
         flex-direction: column;
 
